TAG: mcvload-6-0-5-1
DATE: 09/01/2016
STAFF: lec 
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key not in (1,3) changed to = 2

TAG: mcvload-6-0-4-2
DATE: 07/11/2016
STAFF: sc
CHANGES: merge branch tr12177 to trunk

TAG: mcvload-tr12177-1
DATE: 07/08/2016
STAFF: sc
CHANGES: TR12177

TAG: mcvload-tr12177-BP
DATE: 07/08/2016
STAFF: sc
CHANGES: Branch Point tag

TAG: mcvload-6-0-4-1
DATE: 04/27/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: mcvload-6-0-3-1
DATE: 4/5/2016
STAFF: dbm
CHANGES:
1) Install: Remove use of /hobbiton mount

TAG: mcvload-6-0-1-1
DATE: 11/30/2015
STAFF: dbm
CHANGES:
1) mcvload.config.default: Don't override MAIL_LOG_PROC

TAG: mcvload-6-0-0-4
DATE: 8/25/2015
STAFF: dbm
CHANGES:
1) bin/mcvload.sh: Use "test" instead of "env test"

TAG: mcvload-6-0-0-3
DATE: 8/19/2015
STAFF: dbm
CHANGES:
1) bin/mcvQC.sh: Use .pgpass file in the user's HOME directory if not run
                 as mgiadmin

TAG: mcvload-6-0-0-2
TAG: mcvload-6-0-0-1
DATE: 07/24/2015, 07/27/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: mcvload-tr11750-MP
DATE: 7/1/15
STAFF: pf

TAG: mcvload-tr11750-BP
DATE: 05/22/2015
STAFF: kstone

TAG: mcvload-5-2-1-1
DATE: 02/17/2015
STAFF: dbm
CHANGES:
1) bin/mcvQC.sh: Added "-n" to tail command for compatability
                 between solaris and newer linux

TAG: mcvload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: mcvload-5-1-1-1
DATE: 11/07/2012
STAFF: dbm
CHANGES:
C4AM/B38 release

TAG: mcvload-tr7106-BP
DATE: 10/04/2012
STAFF: jsb
CHANGES: branch point for C4AM project (TR7106)

TAG: mcvload-4-4-1-2
TAG: mcvload-4-4-1-1
DATE: 02/25/2011
STAFF: sc
CHANGES: publishMcv - removed stripping of first line

TAG: mcvload-4-4-0-12
DATE: 10/29/2010
STAFF: sc
CHANGES: Install - replaced shire with lindon

TAG: mcvload-4-4-0-11
DATE: 08/30/2010
STAFF: sc
CHANGES:
1) updated index.html 

TAG: mcvload-4-4-0-10